fix: sort product based on id in getAllProducts